<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="@drawable/some_id">

    <View
        android:id="@+id/main_image"
        android:layout_width="146dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="106dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/main_image"
        />

    <TextView
        android:id="@+id/login_email"
        android:layout_width="320dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="182dp"
        android:text="@string/some_id"
        android:textAppearance="@style/some_id1"
        android:lineSpacingExtra="-2sp"
        android:gravity="top"
        />

    <EditText
        android:id="@+id/login_input_email"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="208dp"
        android:background="@drawable/rectangle_1"
        android:hint="@string/abc_gmail_c"
        android:paddingLeft="13dp"
        android:textColorHint="#bdbdbd"
        android:textSize="14sp"
        android:fontFamily="@font/neo"/>
    <!-- 비밀번호 -->
    <TextView
        android:id="@+id/login_password"
        android:layout_width="320dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="276dp"
        android:gravity="top"
        android:lineSpacingExtra="-2sp"
        android:text="@string/some_id2"
        android:textAppearance="@style/some_id1" />

    <EditText
        android:id="@+id/login_input_password"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="302dp"
        android:background="@drawable/rectangle_2"
        android:fontFamily="@font/neo"
        android:hint="@string/password"
        android:paddingLeft="13dp"
        android:textColorHint="#bdbdbd"
        android:textSize="14sp" />

    <CheckBox
        android:id="@+id/email_checkbox"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="370dp"

        />

    <TextView
        android:id="@+id/remember_email"
        android:layout_width="286dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="371dp"
        android:gravity="top"
        android:lineSpacingExtra="-2sp"
        android:text="@string/some_id3"
        android:textAppearance="@style/some_id3" />

    <CheckBox
        android:id="@+id/keep_checkbox"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="397dp" />

    <TextView
        android:id="@+id/maintain_login"
        android:layout_width="286dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="398dp"
        android:gravity="top"
        android:lineSpacingExtra="-2sp"
        android:text="@string/some_id4"
        android:textAppearance="@style/some_id3" />

    <TextView
        android:id="@+id/btn_login"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="430dp"
        android:background="@drawable/button1"
        android:gravity="center"
        android:text="@string/some_id5"
        android:textAlignment="center"
        android:textAppearance="@style/some_id4" />

    <TextView
        android:id="@+id/btn_sign"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="477dp"
        android:background="@drawable/button1"
        android:gravity="center"
        android:text="@string/some_id6"
        android:textAlignment="center"
        android:textAppearance="@style/some_id4" />

    <View
        android:id="@+id/btn_naver"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="524dp"
        android:background="@drawable/naver4" />

    <View
        android:id="@+id/btn_kakao"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="571dp"
        android:background="@drawable/kakao3" />

</RelativeLayout>