<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sign1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="@drawable/some_id">

    <View
        android:id="@+id/arrow1"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="22dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="23dp"
        android:background="@drawable/arrow"
        />

    <TextView
        android:id="@+id/text_sign1"
        android:layout_width="140dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="64dp"
        android:gravity="top"
        android:lineSpacingExtra="-4sp"
        android:text="@string/some_id7"
        android:textAppearance="@style/some_id7"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sign1_email"
        android:layout_width="320dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="118dp"
        android:gravity="top"
        android:lineSpacingExtra="-2sp"
        android:text="@string/some_id8"
        android:textAppearance="@style/some_id8" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="144dp"
        android:background="@drawable/rectangle_1"
        android:hint="@string/abc_gmail_c"
        android:textSize="14sp"
        android:textColorHint="#bdbdbd"
        android:paddingLeft="13dp"
        />
    <TextView
        android:id="@+id/sign1_check_email"
        android:layout_width="320dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="212dp"
        android:text="@string/some_id9"
        android:textAppearance="@style/some_id9"
        android:lineSpacingExtra="-2sp"
        android:gravity="top"
        />

    <EditText
        android:id="@+id/edit_check_email"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="238dp"
        android:background="@drawable/rectangle_1"
        android:hint="@string/abc_gmail_c"
        android:textSize="14sp"
        android:textColorHint="#bdbdbd"
        android:paddingLeft="13dp"
        />
    <CheckBox
        android:id="@+id/all_agree"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="23dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="390dp"
        />

    <TextView
        android:id="@+id/sign1_all_agree"
        android:layout_width="286dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="390dp"
        android:gravity="top"
        android:lineSpacingExtra="-2sp"
        android:text="@string/some_id10"
        android:textAppearance="@style/some_id10" />

    <CheckBox
        android:id="@+id/first_agree"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="432dp"

        />

    <TextView
        android:id="@+id/sign1_first_agree"
        android:layout_width="286dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="434dp"
        android:gravity="top"
        android:lineSpacingExtra="-6sp"
        android:text="@string/some_id11"
        android:textAppearance="@style/some_id11" />

    <CheckBox
        android:id="@+id/second_agree"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="23dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="460dp"
        />

    <TextView
        android:id="@+id/sign1_second_agree"
        android:layout_width="286dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="463dp"
        android:gravity="top"
        android:lineSpacingExtra="-6sp"
        android:text="@string/some_id12"
        android:textAppearance="@style/some_id12" />

    <CheckBox
        android:id="@+id/thrid_agree"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="23dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="488dp"
        />

    <TextView
        android:id="@+id/sign1_thrid_agree"
        android:layout_width="286dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="490dp"
        android:gravity="top"
        android:lineSpacingExtra="-6sp"
        android:text="@string/some_id13"
        android:textAppearance="@style/some_id13" />

    <TextView
        android:id="@+id/btn_next_sign1"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rectangle_15"
        android:gravity="center"
        android:text="다음"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:fontFamily="@font/neo"
        />

</RelativeLayout>