<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/keyword"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="@drawable/some_id"
    >

    <TextView
        android:id="@+id/text_keyword"
        android:layout_width="200dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="32dp"
        android:gravity="top"
        android:lineSpacingExtra="-4sp"
        android:text="@string/some_id25"
        android:textAppearance="@style/some_id7"
        android:textStyle="bold" />

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/group_12"
        android:layout_width="99dp"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="97dp"
        >

        <TextView
            android:id="@+id/rectangle_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/rectangle_4"
            android:text="@string/some_id26"
            android:textAppearance="@style/keyword_1"
            android:textAlignment="center"
            android:gravity="center"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/some_id"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_above="@+id/btn_next_keyword"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="1sp"
        android:text="@string/some_id27"
        android:textAppearance="@style/some_id14" />

    <TextView
        android:id="@+id/btn_next_keyword"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rectangle_15"
        android:gravity="center"
        android:text="완료"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="15sp" />


</RelativeLayout>