<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sign3"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="@drawable/some_id">

    <View
        android:id="@+id/profile_modify_arrow1"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="22dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="23dp"
        android:background="@drawable/arrow"
        />

    <TextView
        android:id="@+id/text_sign3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="64dp"
        android:text="개인정보 수정"
        android:textAppearance="@style/some_id7"
        android:lineSpacingExtra="-4sp"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/sign3_name"
        android:layout_width="320dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="117dp"
        android:text="이름"
        android:textAppearance="@style/some_id9"
        android:lineSpacingExtra="-2sp"
        android:gravity="top"
        />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="144dp"
        android:background="@drawable/rectangle_1"
        android:textSize="14sp"
        android:textColorHint="#bdbdbd"
        android:paddingLeft="13dp"
        />

    <TextView
        android:id="@+id/sign3_nickname"
        android:layout_width="320dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="212dp"
        android:text="@string/some_id20"
        android:textAppearance="@style/some_id9"
        android:lineSpacingExtra="-2sp"
        android:gravity="top"
        />

    <EditText
        android:id="@+id/edit_nickname"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="238dp"
        android:background="@drawable/rectangle_1"
        android:textSize="14sp"
        android:textColorHint="#bdbdbd"
        android:paddingLeft="13dp"
        />

    <TextView
        android:id="@+id/sign3_age"
        android:layout_width="320dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="305dp"
        android:text="@string/some_id21"
        android:textAppearance="@style/some_id9"
        android:lineSpacingExtra="-2sp"
        android:gravity="top"
        />

    <EditText
        android:id="@+id/edit_age"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="331dp"
        android:background="@drawable/rectangle_1"
        android:hint="@string/some_id22"
        android:paddingLeft="13dp"
        android:textColorHint="#bdbdbd"
        android:textSize="14sp"
        android:fontFamily="@font/neo"/>

    <TextView
        android:id="@+id/sign_num"
        android:layout_width="320dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="399dp"
        android:text="@string/some_id23"
        android:textAppearance="@style/some_id9"
        android:lineSpacingExtra="-2sp"
        android:gravity="top"
        />

    <EditText
        android:id="@+id/edit_num"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="425dp"
        android:background="@drawable/rectangle_1"
        android:hint="@string/some_id24"
        android:textSize="14sp"
        android:textColorHint="#bdbdbd"
        android:paddingLeft="13dp"
        android:fontFamily="@font/neo"
        />

    <TextView
        android:id="@+id/btn_next_sign3"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/rectangle_15"
        android:text="완료"
        android:textSize="15sp"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:gravity="center"
        />

</RelativeLayout>